syntax = "proto3";

package pb;

option go_package = "./pb";

// Create comment request
message CreateCommentRequest {
  string post_id = 1;
  string user_id = 2;
  string content = 3;
}

// Get comment request
message GetCommentRequest {
  string comment_id = 1;
  string post_id = 2; // Add PostId if you want to fetch by PostID
}

// Get comments by post ID request
message GetCommentsByPostIDRequest {
  string post_id = 1;
}

// Update comment request
message UpdateCommentRequest {
  string comment_id = 1;
  string content = 2;
}

// Approve comment request
message ApproveCommentRequest {
  string comment_id = 1;
  string user_id = 2;
}

// Delete comment request
message DeleteCommentRequest {
  string comment_id = 1;
}